[metadata]
name = draxsdk
version = 1.0.19
author = Applica S.R.L.
author_email = marco.nicoletti@applica.guru
description = Python SDK for Drax platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/applica-of-things/drax-sdk-py
project_urls =
    Bug Tracker = https://github.com/applica-of-things/drax-sdk-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
 = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

